--- a/ScraperApp/wwwroot/css/site.css
+++ b/ScraperApp/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* table styles
+-------------------------------------------------- */
+.scroll-div {
+    height: 337px;
+    margin: 1% 0 2% 0;
+    border: 1px solid black;
+    border-left: none;
+    border-right: none;
+    overflow-y: scroll;
+    padding: 1% 1% 0 0;
+}
+
+.table {
+    border: 3px solid green;
+}
