--- a/ScraperApp/Views/Scrape/Index.cshtml
+++ b/ScraperApp/Views/Scrape/Index.cshtml
@@ -2,47 +2,53 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h2>Scrape Time — @Model.Rows[Model.Rows.Count - 10][1]</h2>
-<button>Last Scrape</button>
-<button>Test</button>
-<div class="scroll-div">
-    <table class="table table-bordered table-striped">
-        <tr>
-            <th>Symbol</th>
-            <th>Last Price</th>
-            <th>Change</th>
-            <th> Chg. %</th>
-            <th>Currency</th>
-            <th>Market Time</th>
-            <th>Volume</th>
-            <th>Shares</th>
-            <th>Avg. Volume</th>
-            <th>Day Range</th>
-            <th>Day Chart</th>
-            <th>52 Week Range</th>
-            <th>Market Cap</th>
-        </tr>
-
-        @for (int i = Model.Rows.Count - 10; i < Model.Rows.Count; i++)
-        {
+@if (Model.Rows.Count > 0)
+{
+    <h2 style="margin-top: 6%; display: inline-block"> @Model.Rows[0][1]</h2>
+    <button style="margin-right: .5%; margin-top: 7.2%; float: right">New Scrape</button>
+    <div class="scroll-div">
+        <table class="table table-bordered table-striped">
             <tr>
-                <td>@Model.Rows[i][2]</td>
-                <td>@Model.Rows[i][3]</td>
-                <td>@Model.Rows[i][4]</td>
-                <td>@Model.Rows[i][5]</td>
-                <td>@Model.Rows[i][6]</td>
-                <td>@Model.Rows[i][7]</td>
-                <td>@Model.Rows[i][8]</td>
-                <td>@Model.Rows[i][9]</td>
-                <td>@Model.Rows[i][10]</td>
-                <td>@Model.Rows[i][11]</td>
-                <td>@Model.Rows[i][12]</td>
-                <td>@Model.Rows[i][13]</td>
-                <td>@Model.Rows[i][14]</td>
+                <th>Symbol</th>
+                <th>Last Price</th>
+                <th>Change</th>
+                <th> Chg. %</th>
+                <th>Currency</th>
+                <th>Market Time</th>
+                <th>Volume</th>
+                <th>Shares</th>
+                <th>Avg. Volume</th>
+                <th>Day Range</th>
+                <th>Day Chart</th>
+                <th>52 Week Range</th>
+                <th>Market Cap</th>
             </tr>
-        }
-    </table>
+
+            @for (int i = 0; i < Model.Rows.Count; i++)
+            {
+        <tr>
+            <td>@Model.Rows[i][2]</td>
+            <td>@Model.Rows[i][3]</td>
+            <td>@Model.Rows[i][4]</td>
+            <td>@Model.Rows[i][5]</td>
+            <td>@Model.Rows[i][6]</td>
+            <td>@Model.Rows[i][7]</td>
+            <td>@Model.Rows[i][8]</td>
+            <td>@Model.Rows[i][9]</td>
+            <td>@Model.Rows[i][10]</td>
+            <td>@Model.Rows[i][11]</td>
+            <td>@Model.Rows[i][12]</td>
+            <td>@Model.Rows[i][13]</td>
+            <td>@Model.Rows[i][14]</td>
+        </tr>
+            }
+        </table>
+    </div>
+}
+else
+{
+<div>
+    <h1 style="text-align: center; margin-top: 15%;">No Scrapes to Display</h1>
+    <button style="display: block; padding: 2%; margin: auto; margin-top: 3.2%;">Do a Scrape</button>
 </div>
-<button>Start Date</button>
-<button>Previous</button>
-<button>Next</button>
+}
