changed some sql queries to ORDER BY Symbol.

--- a/ScraperApp/Views/Scrape/Fetch.cshtml
+++ b/ScraperApp/Views/Scrape/Fetch.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Wait";
 }
 
-<h1 style="text-align: center; margin-top: 6%;">Please wait<br />gathering your data!</h1>
+<h1 style="color: green; text-align: center; margin-top: 6%;">Please wait<br />gathering your data!</h1>
 
 <script>
     (function () {
