--- a/ScraperApp/Views/Scrape/Index.cshtml
+++ b/ScraperApp/Views/Scrape/Index.cshtml
@@ -5,7 +5,7 @@
 
 @if (Model.Rows.Count > 0)
 {
-    <h2 class="@ViewBag.status" style="display: inline-block"> @Model.Rows[0][1]<span class=" @ViewBag.status"> — (Most Recent Scrape)</span></h2>
+    <h2 class="@ViewBag.status" style="display: inline-block"> @Model.Rows[0][1]<span class=" @ViewBag.status"></span></h2>
     <button class="new-scrape-btn" onclick="runScrape()">New Scrape</button>
     <div class="scroll-div">
         <table class="table table-striped @ViewBag.status">
