--- a/ScraperApp/wwwroot/css/site.css
+++ b/ScraperApp/wwwroot/css/site.css
@@ -95,11 +95,11 @@ table {
 }
 
 table.stale {
-        border: 3px solid gray;
-    }
+    border: 3px solid rgb(238, 159, 159);
+}
 
-.stale {
-    color: gray;
+h2.stale {
+    color: rgb(238, 159, 159);
 }
 
 span.stale {
