--- a/ScraperApp/Views/Shared/_Layout.cshtml
+++ b/ScraperApp/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Scrape" asp-action="History">History</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Scrape" asp-action="Retrospective">Retrospective</a>
+                        </li>
                     </ul>
                 </div>
             </div>
